--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "archiver": "^7.0.1",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "express": "4.18.2",
     "express-async-handler": "^1.2.0",
     "express-rate-limit": "^7.2.0",
