--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.js",
-    "seed": "node prisma/admin.js"
+    "admin": "node prisma/admin.js",
+    "seed":"node prisma/seed.js"
   },
   "dependencies": {
     "@faker-js/faker": "^9.0.2",
