--- a/backend/package.json
+++ b/backend/package.json
@@ -5,13 +5,14 @@
   "scripts": {
     "dev": "nodemon src/index.js",
     "admin": "node prisma/admin.js",
-    "seed":"node prisma/seed.js"
+    "seed": "node prisma/seed.js"
   },
   "dependencies": {
     "@faker-js/faker": "^9.0.2",
     "@prisma/client": "^5.9.1",
     "archiver": "^7.0.1",
     "bcrypt": "^5.1.1",
+    "bull": "^4.16.5",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "express": "4.18.2",
@@ -22,7 +23,9 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.0.1",
+    "redis": "^4.7.0",
     "xss-clean": "^0.1.4"
   },
   "devDependencies": {
