--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -3,15 +3,15 @@ version: '3.8'
 services:
   mysql:
     image: mysql:8.0
-    container_name: jobfinderdb_container
+    container_name: internship_container
     restart: unless-stopped
     environment:
       MYSQL_ROOT_PASSWORD: root_password  
-      MYSQL_DATABASE: jobfinderdb      
+      MYSQL_DATABASE: internship      
     ports:
       - "3306:3306"
     volumes:
-      - jobfinderdb_data:/var/lib/mysql
+      - internship_data:/var/lib/mysql
 
   phpmyadmin:
     image: phpmyadmin
@@ -22,6 +22,16 @@ services:
       PMA_PORT: 3306
     ports:
       - "8080:80"
-      
+
+  redis:
+    image: redis:latest
+    container_name: dtalkec_redis
+    restart: unless-stopped
+    ports:
+      - "6379:6379" # Expose Redis on port 6379
+    volumes:
+      - redis_data:/data # Persist Redis data
+
 volumes:
-  jobfinderdb_data:
+  internship_data:
+  redis_data:
