--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.js",
+    "worker": "node src/worker.js",
     "admin": "node prisma/admin.js",
     "seed": "node prisma/seed.js"
   },
@@ -12,7 +13,7 @@
     "@prisma/client": "^5.9.1",
     "archiver": "^7.0.1",
     "bcrypt": "^5.1.1",
-    "bull": "^4.16.5",
+    "bullmq": "^4.16.5",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "express": "4.18.2",
