--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 
 services:
   mysql:
@@ -12,6 +11,8 @@ services:
       - "3306:3306"
     volumes:
       - internship_data:/var/lib/mysql
+    networks:
+      - internship_network
 
   phpmyadmin:
     image: phpmyadmin
@@ -22,16 +23,30 @@ services:
       PMA_PORT: 3306
     ports:
       - "8080:80"
+    networks:
+      - internship_network
 
-  redis:
-    image: redis:latest
-    container_name: dtalkec_redis
+  backend:
+    build: .
+    container_name: dtalkec_backend
+    env_file:
+      - ./.env
     restart: unless-stopped
     ports:
-      - "6379:6379" # Expose Redis on port 6379
-    volumes:
-      - redis_data:/data # Persist Redis data
+      - "4000:4000"
+      - "8081:8081"
+    environment:
+      NODE_ENV: production
+      MYSQL_ROOT_PASSWORD: root_password  
+      MYSQL_DATABASE: internship      
+    depends_on:
+      - mysql
+    networks:
+      - internship_network
 
 volumes:
   internship_data:
-  redis_data:
+
+networks:
+  internship_network:
+    name: internship_network
