--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.js",
-    "worker": "node src/worker.js",
+    "start": "node src/index.js",
     "admin": "node prisma/admin.js",
+    "migrate": "npx prisma migrate dev",
     "seed": "node prisma/seed.js"
   },
   "dependencies": {
@@ -23,11 +24,10 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.0.1",
+    "prisma": "^6.5.0",
     "ws": "^8.18.1"
   },
-  "devDependencies": {
-    "prisma": "^6.5.0"
-  },
+  "devDependencies": {},
   "keywords": [],
   "author": "",
   "license": "ISC",
