fix: update environment variable references for WebSocket URL

--- a/front/.env
+++ b/front/.env
@@ -1,2 +1,2 @@
-WEB_SOCKET_URL="ws://localhost:8081"
-VITE_API_URL="http://localhost:4000/"
+VITE_WEB_SOCKET_URL="ws://localhost:8081"
+VITE_API_URL="http://localhost:4000"
